# nounswap

./: .env.example  .gitignore  .graphclientrc.yml  README.md  bun.lockb  codegen.ts  components.json  compose.yaml  next.config.js  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
apps/indexer/: .gitignore  Dockerfile  nixpacks.toml  package.json  ponder.config.ts  ponder.schema.ts
apps/web/: .prettierrc  Dockerfile  README.md  next.config.js  package.json  tsconfig.json
cms/: Dockerfile  README.md  bun.lockb  next.config.mjs  package.json
cms/src/: payload-types.ts  payload.config.ts
contracts/: .gitignore  README.md  foundry.toml  remappings.txt
contracts/script/: NFTSwapper.s.sol  NounSwap.s.sol
contracts/src/: NFTSwapper.sol  NounSwap.sol  TimelockNFTSwapper.sol
contracts/test/: NFTSwapper.t.sol  NounSwap.t.sol
indexer/: .env.example  Dockerfile  README.md  bun.lockb  package.json  pnpm-lock.yaml  ponder-env.d.ts  ponder.config.mainnet.ts  ponder.config.testnet.ts  ponder.config.ts  ponder.schema.ts
indexer/abis/: NounsTokenAbi.ts  chainlinkPriceFeed.ts  nounsClientIncentives.ts  nounsDaoExecutor.ts  nounsErc20.ts  (+1 more)
proposal-actions/: Cargo.toml  query.graphql  schema.json
proposal-actions/src/: main.rs
src/: config.ts
web/: .env.example  .gitignore  Dockerfile  README.md  bun.lockb  codegen.ts  components.json  getNouns.sh  next.config.js  nixpack.toml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  wagmi.config.ts
(+694 files in other folders)
